# lamda_red

./: Cargo.toml  README.md  gram.pest  output.xml  rules.txt  sample.zz  sample_mx_graph.xml
drizzle/: CHANGELOG.md  README.md  drizzle-1.0.0.vsix  language-configuration.json  package.json  sample.zz  vsc-extension-quickstart.md
drizzle/syntaxes/: drizzle.plist  drizzle.tmLanguage.json
sample/: needed_shapes.xml  sample_shape.xml
src/: export.rs  gram.pest  label_control.rs  lamda_red_grammar.pest  main.rs  parsing.rs  sample.pest
