[package]
name = "lamda_red"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
cairo-rs = { version = "0.20.1", features = ["png"] }
pest = "2.7.11"
pest_derive = "2.7.11"
rand = "0.8.0"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.207"
serde = "1.0.207"
serde_json = "1.0.125"
